# CppAPITutorial

./: LISCENCE  README.md
1_OneBinary/: CMakeLists.txt  ClassB.h  Manager.h  main.cxx
2_SharedLib/ClassA/: CMakeLists.txt
2_SharedLib/ClassB/: CMakeLists.txt
2_SharedLib/Manager/: Base.h  CMakeLists.txt
3_API/: CMakeLists.txt  main.cxx
3_API/ClassA/: ClassA.cxx  ClassA.h
3_API/Manager/: CMakeLists.txt  Factory.cxx  Factory.h
4_DynamicAPI/: .main.cxx.swp  CMakeLists.txt
4_DynamicAPI/ClassA/: CMakeLists.txt
4_DynamicAPI/ClassB/: ClassB.h
4_DynamicAPI/Manager/: Factory.cxx
5_DynamicWithSpec/: CMakeLists.txt  main.cxx
5_DynamicWithSpec/ClassB/: CMakeLists.txt  ClassB.cxx  ClassB.h
5_DynamicWithSpec/Manager/: CMakeLists.txt  Factory.cxx
5_DynamicWithSpec/User/: CMakeLists.txt  User.cxx  User.h
API/: CMakeLists.txt
DynamicAPI/ClassB/: ClassB.cxx
DynamicAPI/Manager/: Base.h  Factory.cxx  Manager.cxx
OneBinary/: ClassA.cxx
SharedLib/ClassA/: ClassA.h
SharedLib/ClassB/: ClassB.cxx
SharedLib/Manager/: Base.cxx
